# zkproof_slack

./: .gitignore  README.md  pyproject.toml
files/: poseidon_hash_check.zok
src/zkproof_slack/: crew.py  main.py
src/zkproof_slack/config/: agents.yaml  tasks.yaml
src/zkproof_slack/tools/: custom_tool.py
src/zkproof_slack/zkproof/: create_credentials.py  create_proof.py
