[project]
name = "zkproof_slack"
version = "0.1.0"
description = "zkproof_slack using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.80.0,<1.0.0",
    "slack_sdk"
]

[project.scripts]
zkproof_slack = "zkproof_slack.main:run"
run_crew = "zkproof_slack.main:run"
train = "zkproof_slack.main:train"
replay = "zkproof_slack.main:replay"
test = "zkproof_slack.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
